# workshop_ilcd

./: .gitignore  Programacion0.ipynb  Programacion1.ipynb  Programacion2.ipynb  README.md  pyproject.toml
