[project]
name = "workshop-ilcd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anywidget>=0.9.18",
    "jupyterlab>=4.3.6",
    "lxml[html-clean]>=5.3.1",
    "newspaper3k>=0.2.8",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
]
